-*- text -*-

User visible changes

2010-06-24

  * When starting, we don't care about windows with override redirect
    set. This means, for instance, that if a GTK application was
    running when we started, we won't draw any borders around its
    menus.

  * New option, -t <terminal-program>.

  * Fixed bugs.

2010-06-22

  * Handles size changes of the root window. That is, if the user adds
    an additional screen or removes one when the X server supports
    RANDR.

  * MODKEY + R toggles raise/lower of window.

  * Maps new windows on pointer position and tries to fit on screen.

  * Resizes with size hints. This means, for instance, that most
    programs using fixed width fonts resizes by font width and height.
    No feedback yet, though.

  * Handles more requests, which means usable with more programs
    (xterm and xpdf, for instance, which hardly worked before).

  * Fixed bugs.
  
2010-06-19

  * Now a real window manager. Now controls mapping of windows. If we
    can't be a real window manager, this probably means there is
    already one running, so we fall back to co-running.

    Windows are mapped at the pointer position if we can control it.

  * A flag, -b, for not drawing any borders what so ever. Might be
    useful when co-running.

  * Now doesn't raise windows all the time while moving or resizing
    with the mouse. Just raises once.